<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context="com.example.jagoda.bakingapp.view.recipeSteps.StepListFragment">

    <ExpandableListView
        android:id="@+id/ingredients_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/ingredients_margin"
        android:layout_marginEnd="@dimen/ingredients_margin"
        android:groupIndicator="@drawable/ic_arrow_drop_down"
        android:indicatorStart="40dp"
        android:indicatorEnd="75dp"
        android:layout_marginBottom="@dimen/ingredients_margin"/>


    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/muffin_size"
        android:layout_height="@dimen/muffin_size"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_muffin"
        android:scaleType="centerCrop"
        android:tint="@color/rose_bud"
        android:layout_marginBottom="@dimen/ingredients_margin"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
