...
        app:resize_mode="fixed_width"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/step_detailed_desc_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/detailed_desc_margin"
        app:layout_constraintTop_toBottomOf="@+id/video_view"
        app:layout_constraintBottom_toTopOf="@+id/thumbnail_image_view"
        app:layout_constraintStart_toStartOf="parent"
...
